package org.esfe.modelos.enums;

public enum EstadoCita {
    PROGRAMADA,
    REAGENDADA,
    CANCELADA,
    ATENDIDA,
    NO_ASISTIO
}
