package org.esfe.modelos.enums;

public enum EstadoReceta {
    PRESCRITA,
    DISPENSADA
}
