package org.esfe.modelos.enums;

public enum RolUsuario {
    MEDICO,
    RECEPCIONISTA,
    ADMINISTRADOR,
    ENCARGADO_INVENTARIO
}

