package org.esfe.modelos.enums;

public enum TipoMovimiento {
    ENTRADA,
    SALIDA,
    AJUSTE
}
